--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@
     outline: none;
     background-color: #fff;
     width: 150px;
+    font-size: 15px;
    }
    #bar{
     background-color: #d52424;
@@ -43,6 +44,12 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
+   }
+   #text-input{
+    font-size: 15px;
+   }
+   #checkButton{
+    font-size: 15px;
    }
 
    
